# RustEmbeddedDotnetRuntime

./: .gitignore  README.md  xmake.lua
AppWithPlugin/: AppWithPlugin.sln
AppWithPlugin/AppWithPlugin/: AppWithPlugin.csproj  Debounce.cs  Entry.cs  Locker.cs  NativeStudent.cs  PluginLoadContext.cs  Program.cs
AppWithPlugin/Foundation/: Foundation.csproj  Locker.cs
AppWithPlugin/HelloPlugin/: HelloCommand.cs  HelloPlugin.csproj
AppWithPlugin/Native/: Native.csproj  NativeStudent.cs
AppWithPlugin/PluginBase/: PluginBase.csproj
rs_dotnet/: Cargo.toml
rs_dotnet/src/: dotnet.rs  entry_info.rs  lib.rs
rs_dotnet/src/linux/: mod.rs
rs_dotnet/src/windows/: dotnet.rs
rust_embedded_dotnet_runtime/: Cargo.toml
rust_embedded_dotnet_runtime/src/: dotnet.rs  entry_info.rs  file.rs  lib.rs  main.rs  student.rs  student_func_ptr.rs  win.rs
rust_embedded_dotnet_runtime/src/platform/: dotnet.rs  mod.rs
rust_embedded_dotnet_runtime/src/platform/linux/: dotnet.rs
rust_embedded_dotnet_runtime/src/platform/windows/: dotnet.rs  global_context.rs  mod.rs
