[package]
name = "rust_embedded_dotnet_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.33"
lazy_static = "1.4.0"
notify = "5.1.0"
notify-debouncer-mini = { version = "0.2.0" }

[target.'cfg(unix)'.dependencies]
libloading = "0.8"
